<resources>
    <string name="app_name">VocabTrainer</string>
    <string name="action_add_word">Add word</string>
    <string name="type_word">Type word</string>
    <string name="scan_word">Scan word</string>
    <string name="show_words">Show Words</string>
    <string name="start_training">Start Training</string>
    <string name="breakfast">Breakfast</string>
    <string name="conversation">Simple Conversation</string>
    <string name="shopping">Shopping</string>
    <string name="travel">Traveling</string>
    <string name="title_activity_add_word">AddWordActivity</string>
    <string name="add_word">Add Word</string>
    <string name="enter_word">Enter word</string>
    <string name="enter_translation">Enter translation</string>
    <string name="language_de">de</string>
    <string name="language_en">en</string>
    <string name="title_activity_word_explanation">WordExplanationActivity</string>
    <string name="fill_fields">Please fill all fields.</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="changes_will_be_lost">Changes will be lost if you do not save it now.</string>
    <string name="save_now">Save now</string>
    <string name="discard">Discard changes</string>
    <string name="title_activity_list_word">ListWordActivity</string>
    <string name="no_words_added">No words in this category.</string>
    <string name="inserted_word">Word inserted successfully</string>
    <string name="delete_word">Delete Word</string>
    <string name="delete_word_permantely">Are you sure you want to delete this word?</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="deleted_entry">Deleted word.</string>
    <string name="update_word">Update Word</string>
    <string name="category">Select category:</string>
    <string name="title_activity_oxford_definition">OxfordDefinitionActivity</string>
    <string name="powered_by">Powered by Oxford Dictionaries</string>
    <string name="no_entry_found">No entry found.</string>
    <string name="check_internet">Please check your internet connection.</string>
    <string name="examples">Examples</string>
    <string name="dictionary">Dictionary</string>
    <string name="search">Search</string>
    <string name="translation">Translation</string>
    <string name="enter_german_word">Enter German word</string>
    <string name="enter_english_word">Enter English word</string>
    <string name="questionmark">\?</string>
    <string name="training">Training</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="found_words">Detected words:</string>
    <string name="clear_list">Clear List</string>
    <string name="stop_scanning">Stop</string>
    <string name="start_scanning">Start</string>
    <string name="google_api_not_available">Vision api not available.</string>
    <string name="no_word_found_try_manual">No word found, try adding manual.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="stock_photo">Stock photo</string>
    <string name="swap_language">Swap language</string>
    <string name="select_category">Select category for word</string>
    <string name="select_category_widget">Select category for the widget</string>
    <string name="lookup_in_oxford_dictionary">Look word up in Oxford dictionary</string>
</resources>
