<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:id="@+id/content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    tools:context="com.vocabtrainer.project.vocabtrainer.ScanActivity"
    tools:showIn="@layout/activity_scan">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <com.vocabtrainer.project.vocabtrainer.camera.CameraSourcePreview
            android:id="@+id/camera_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/camera_stop"
            style="@style/camera_button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="stopCamera"
            android:text="@string/stop_scanning" />

        <TextView
            android:id="@+id/camera_start"
            style="@style/camera_button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="startCamera"
            android:text="@string/start_scanning"
            android:clickable="true"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp">

        <TextView
            style="@style/category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/found_words" />

        <TextView
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="right"
            android:onClick="clearScannedWords"
            android:text="@string/clear_list" />
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
</LinearLayout>
